update marker and resolution of the map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-gray-100">
     <div id="map-container" onclick="placeMarker(event)">
         <div id="map-image">
-            <img src="assets/img/map.png" id="map" alt="Map Image">
+            <img class="img-class" src="assets/img/map.png" id="map" alt="Map Image">
             <div id="marker-container"></div>
         </div>
     </div>
